tests/ui/closures/2229_closure_analysis/multilevel-path-2.stderr
error: First Pass analysis includes:
  --> $DIR/multilevel-path-2.rs:18:5
   |
LL | /     || {
LL | |
LL | |
LL | |         println!("{}", w.p.x);
...  |
LL | |     };
   | |_____^
   |
note: Capturing w[(0, 0),(0, 0)] -> Immutable
  --> $DIR/multilevel-path-2.rs:21:24
   |
LL |         println!("{}", w.p.x);
   |                        ^^^^^

error: Min Capture analysis includes:
  --> $DIR/multilevel-path-2.rs:18:5
   |
LL | /     || {
LL | |
LL | |
LL | |         println!("{}", w.p.x);
...  |
LL | |     };
   | |_____^
   |
note: Min Capture w[(0, 0),(0, 0)] -> Immutable
  --> $DIR/multilevel-path-2.rs:21:24
   |
LL |         println!("{}", w.p.x);
   |                        ^^^^^

error: aborting due to 2 previous errors

